--- a/app/src/main/res/layout/view_ar_visit.xml
+++ b/app/src/main/res/layout/view_ar_visit.xml
@@ -10,10 +10,10 @@
         android:id="@+id/arTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_20"
         android:text="@string/str_ar"
         android:textColor="@android:color/black"
         android:textSize="@dimen/sp_20"
-        android:layout_marginStart="@dimen/dp_20"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/arTitle" />
 
     <TextView
+        android:id="@+id/arTvMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/dp_8"
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_14"
         android:orientation="horizontal"
+        android:layout_marginEnd="@dimen/dp_10"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arTitleSub" />
