--- a/app/src/main/res/navigation/multi_fragment_root.xml
+++ b/app/src/main/res/navigation/multi_fragment_root.xml
@@ -195,5 +195,8 @@
         android:id="@+id/fragment_RobotWebViewFragment"
         android:name="com.stxx.wyhvisitorandroid.view.splash.RobotWebViewFragment"
         tools:layout="@layout/fragment_webview" />
+    <activity
+        android:id="@+id/fragment_ar_nav"
+        android:name="com.stxx.wyhvisitorandroid.view.scenic.ArNavActivity" />
 
 </navigation>
