--- a/app/src/main/res/layout/custom_robot.xml
+++ b/app/src/main/res/layout/custom_robot.xml
@@ -7,4 +7,4 @@
     android:layout_height="wrap_content"
     app:lottie_autoPlay="true"
     app:lottie_loop="true"
-    app:lottie_rawRes="@raw/robot" />
+    app:lottie_rawRes="@raw/robot_blue" />
