--- a/app/src/main/res/layout/fragment_asr.xml
+++ b/app/src/main/res/layout/fragment_asr.xml
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_10"
-                android:text="查找景点"
+                android:text="园区有哪些景点"
                 android:textColor="@color/fontMajor"
                 android:textSize="@dimen/sp_16"
                 android:textStyle="italic"
