--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -156,10 +156,16 @@
 
     </style>
 
-    <style name="bstDialog" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="bstDialog" parent="Theme.Design.BottomSheetDialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <!-- 是否模糊-->
-        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+         
+        <item name="android:windowIsFloating">true</item>
+         
+        <item name="android:windowFrame">@null</item>
+         
+        <item name="android:windowIsTranslucent">true</item>
 
     </style>
 
