--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -33,9 +33,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:focusableInTouchMode="true"
+            android:layout_marginHorizontal="@dimen/dp_30"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:marqueeRepeatLimit="2"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="@dimen/sp_18"
-            tools:text="@string/app_name" />
+            tools:text="温河榆温榆河温榆河温榆河温榆河温榆河温榆河温榆河温榆榆温榆河温榆河温榆河温榆河温榆河温榆河温榆河温榆河" />
 
 
         <TextView
