--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -86,6 +86,7 @@
         android:text="用户协议"
         android:textColor="@color/blue_700"
         android:textSize="@dimen/sp_16"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tvCompany"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -101,6 +102,7 @@
         android:text="隐私政策"
         android:textColor="@color/blue_700"
         android:textSize="@dimen/sp_16"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tvCompany"
         app:layout_constraintLeft_toRightOf="@id/tvUserPact"
         app:layout_constraintRight_toLeftOf="@id/tvBusinessLicense" />
@@ -114,6 +116,7 @@
         android:text="营业执照"
         android:textColor="@color/blue_700"
         android:textSize="@dimen/sp_16"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tvCompany"
         app:layout_constraintLeft_toRightOf="@id/tvSecret"
         app:layout_constraintRight_toRightOf="parent" />
@@ -124,6 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_20"
         android:text="中通服科信信息技术有限公司"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
