--- a/app/src/main/res/layout/scenic_map_bubble_dialog.xml
+++ b/app/src/main/res/layout/scenic_map_bubble_dialog.xml
@@ -79,8 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
-                android:ellipsize="marquee"
-                android:maxLength="30"
+                android:ellipsize="end"
                 android:maxLines="2"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvBubblePre"
