--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,12 +81,14 @@
     </style>
 
     <style name="halfDialog" parent="AlertDialog.AppCompat">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="backgroundColor">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:backgroundDimAmount">0.5</item>
+        <item name="android:backgroundDimAmount">0</item>
         <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
     <!--右边弹出Dialog动画-->
     <style name="RightAnimation" parent="android:Animation">
