--- a/app/src/main/res/layout/dialog_smart_tip.xml
+++ b/app/src/main/res/layout/dialog_smart_tip.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
 
     <com.airbnb.lottie.LottieAnimationView
@@ -22,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_36"
-        android:background="@drawable/shape_notice"
+        android:background="@drawable/shape_ai_tip"
         app:layout_constraintCircleAngle="0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -33,18 +32,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_16"
+            android:paddingHorizontal="@dimen/dp_14"
             android:text="@string/full_ar"
             android:textColor="@color/fontMajor"
-            android:textSize="@dimen/sp_18"
+            android:textSize="@dimen/sp_16"
+            android:textStyle="italic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="10dp"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="@dimen/dp_16"
-            android:background="@color/fontMajor"
+            android:background="@color/dividerColor"
+            android:layout_marginTop="@dimen/dp_3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/smartTipTvTitle" />
 
@@ -53,7 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_16"
-            android:textSize="@dimen/sp_16"
+            android:textSize="@dimen/sp_14"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/smartTipTvTitle"
@@ -63,7 +65,6 @@
             android:id="@+id/btnConfirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_20"
             android:gravity="center"
             android:paddingHorizontal="@dimen/dp_30"
             android:paddingVertical="@dimen/dp_6"
@@ -75,7 +76,8 @@
             app:layout_constraintTop_toBottomOf="@id/smartTipTvContent"
             app:normalBackgroundColor="@color/colorPrimaryYellow"
             app:normalTextColor="@color/white"
-            app:pressBackgroundColor="@color/colorTabSelect" />
+            app:pressBackgroundColor="@color/colorTabSelect"
+            app:pressTextColor="@color/white" />
 
         <Space
             android:layout_width="match_parent"
