--- a/app/src/main/res/layout/fragment_asr.xml
+++ b/app/src/main/res/layout/fragment_asr.xml
@@ -81,6 +81,7 @@
             android:id="@+id/rvBot"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/dp_10"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@id/speakView"
             app:layout_constraintLeft_toLeftOf="parent"
