--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,8 +51,8 @@
             android:layout_marginEnd="@dimen/dp_26"
             android:hint="用户名/手机号"
             android:theme="@style/loginLabel"
-            app:errorEnabled="true"
             app:counterMaxLength="11"
+            app:errorEnabled="true"
             app:errorTextAppearance="@style/loginLabelError"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -66,8 +66,8 @@
                 android:drawablePadding="@dimen/dp_12"
                 android:imeOptions="actionNext"
                 android:inputType="text"
-                android:maxLines="1"
                 android:maxLength="11"
+                android:maxLines="1"
                 android:paddingStart="@dimen/dp_8"
                 android:textSize="@dimen/sp_16" />
 
@@ -94,8 +94,8 @@
                 android:drawableStart="@mipmap/ic_login_pwd"
                 android:drawablePadding="@dimen/dp_12"
                 android:inputType="textPassword"
-                android:paddingLeft="@dimen/dp_8"
                 android:maxLength="20"
+                android:paddingLeft="@dimen/dp_8"
                 android:textSize="@dimen/sp_16" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -130,6 +130,7 @@
             app:normalBackgroundColor="#FDD655"
             app:pressBackgroundColor="#CDDC39" />
 
+
         <TextView
             android:id="@+id/tvGoRegister"
             android:layout_width="wrap_content"
@@ -141,6 +142,20 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnLogin" />
+
+        <TextView
+            android:id="@+id/btnWxLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:drawablePadding="@dimen/dp_5"
+            android:text="微信登陆"
+            android:textColor="@color/fontMajor"
+            android:textSize="@dimen/sp_14"
+            app:drawableTopCompat="@mipmap/icon_wechat"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGoRegister" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
