--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -49,7 +49,7 @@
         android:id="@+id/tvCompEmail2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="wyh@qq.com"
+        android:text="wenyuriverpark@163.com"
         android:textColor="@color/fontGrey2"
         android:textSize="@dimen/sp_18"
         app:layout_constraintLeft_toLeftOf="@id/tvCompEmail"
@@ -71,7 +71,7 @@
         android:id="@+id/tvOfficalEmail2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="wyh@qq.com"
+        android:text="wenyuriverpark@163.com"
         android:textColor="@color/fontGrey2"
         android:textSize="@dimen/sp_18"
         app:layout_constraintLeft_toLeftOf="@id/tvCompEmail"
