--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical"
     tools:context=".view.mine.UserInfoFragment">
 
+    <include layout="@layout/toolbar" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,19 +61,21 @@
 
 
     <RelativeLayout
+        android:id="@+id/rlBindAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dp_12"
         android:background="@drawable/underline"
         android:gravity="center_vertical"
-        android:visibility="gone"
-        android:paddingVertical="@dimen/dp_15">
+        android:paddingVertical="@dimen/dp_15"
+        android:visibility="visible">
 
         <TextView
+            android:id="@+id/tvBindAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="账号绑定"
+            android:text="帐号绑定"
             android:textColor="@color/fontMajor"
             android:textSize="@dimen/sp_16" />
 
