--- a/app/src/main/res/navigation/multi_fragment_root.xml
+++ b/app/src/main/res/navigation/multi_fragment_root.xml
@@ -72,7 +72,7 @@
         android:name="com.stxx.wyhvisitorandroid.view.home.ReportResultDetailFragment"
         tools:layout="@layout/fragment_report_detail" />
 
-    <fragment
+    <activity
         android:id="@+id/fragment_user_info"
         android:name="com.stxx.wyhvisitorandroid.view.mine.UserInfoFragment"
         tools:layout="@layout/fragment_user_info" />
@@ -205,7 +205,6 @@
     <fragment
         android:id="@+id/fragment_webview_primeval"
         android:name="com.stxx.wyhvisitorandroid.view.ScanResultFragment" />
-
 
     <dialog
         android:id="@+id/dialog_smart_tip"
