--- a/mvvm_lib/src/main/res/layout/loading_dialog_view.xml
+++ b/mvvm_lib/src/main/res/layout/loading_dialog_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/flyLoadingDialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
@@ -10,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:clickable="false"
         android:alpha="0.9"
         android:background="@drawable/shape_loading"
+        android:clickable="false"
         android:paddingHorizontal="18dp"
         android:paddingVertical="5dp">
 
