--- a/app/src/main/res/layout/fragment_scenic_news_detail.xml
+++ b/app/src/main/res/layout/fragment_scenic_news_detail.xml
@@ -65,6 +65,13 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvNewsDetailDate" />
 
+
+            <com.stxx.wyhvisitorandroid.widgets.X5WebView
+                android:id="@+id/webviewLine"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_360"
+                android:layout_marginHorizontal="@dimen/dp_8"
+                android:visibility="gone" />
         </LinearLayout>
 
     </LinearLayout>
