--- a/app/src/main/res/navigation/multi_fragment_root.xml
+++ b/app/src/main/res/navigation/multi_fragment_root.xml
@@ -205,7 +205,9 @@
     <fragment
         android:id="@+id/fragment_webview_primeval"
         android:name="com.stxx.wyhvisitorandroid.view.ScanResultFragment" />
-
+    <fragment
+        android:id="@+id/fragment_one_key_wifi"
+        android:name="com.stxx.wyhvisitorandroid.view.home.OneKeyWifiFragment" />
     <dialog
         android:id="@+id/dialog_smart_tip"
         android:name="com.stxx.wyhvisitorandroid.view.dialog.SmartTipDialog" />
