--- a/app/src/main/res/layout/marker_number.xml
+++ b/app/src/main/res/layout/marker_number.xml
@@ -10,9 +10,9 @@
         android:id="@+id/tvMarkerIndex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_circle"
+        android:background="@drawable/shape_grey_stroke"
         android:gravity="center"
-        android:paddingHorizontal="@dimen/dp_6"
+        android:paddingHorizontal="@dimen/dp_9"
         android:paddingVertical="@dimen/dp_3"
         android:textColor="@color/fontGrey"
         android:textSize="@dimen/sp_12"
