--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_title"
     android:layout_width="match_parent"
@@ -18,42 +19,70 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimaryYellow">
 
-        <ImageView
-            android:id="@+id/toolbar_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="4dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="4dp"
-            android:src="@drawable/ic_left_arrow_black" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/app_tv_Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:focusableInTouchMode="true"
-            android:layout_marginHorizontal="@dimen/dp_30"
-            android:ellipsize="marquee"
-            android:focusable="true"
-            android:marqueeRepeatLimit="2"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp_18"
-            tools:text="温河榆温榆河温榆河温榆河温榆河温榆河温榆河温榆河温榆榆温榆河温榆河温榆河温榆河温榆河温榆河温榆河温榆河" />
+            <ImageView
+                android:id="@+id/toolbar_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingTop="4dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="4dp"
+                android:src="@drawable/ic_left_arrow_black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/toolbar_close"
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_30"
+                android:layout_gravity="center_vertical"
+                android:paddingVertical="@dimen/dp_4"
+                android:src="@drawable/ic_close_black"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/toolbar_back"
+                app:layout_constraintLeft_toRightOf="@id/toolbar_back"
+                app:layout_constraintTop_toTopOf="@id/toolbar_back" />
+
+            <TextView
+                android:id="@+id/app_tv_Title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_80"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:marqueeRepeatLimit="2"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_18"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="温河榆温榆河温榆河温榆河温榆河温榆河温榆河温榆河温榆榆温榆河温榆河温榆河温榆河温榆河温榆河温榆河温榆河" />
 
 
-        <TextView
-            android:id="@+id/tv_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:padding="8dp"
-            android:text="发布"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/tv_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:padding="8dp"
+                android:text="发布"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </FrameLayout>
 </LinearLayout>
