--- a/app/src/main/res/layout/fragment_webview.xml
+++ b/app/src/main/res/layout/fragment_webview.xml
@@ -31,7 +31,7 @@
             <FrameLayout
                 android:id="@+id/frame_layout_title"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_44"
+                android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimaryYellow">
 
                 <ImageView
