--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -84,6 +84,7 @@
                 android:layout_marginHorizontal="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_15"
                 android:background="@drawable/shape_visitor_server_grid"
+                android:inputType="textPassword"
                 android:hint="@string/str_input_pwd"
                 android:maxLength="20"
                 android:paddingHorizontal="@dimen/dp_15"
@@ -99,6 +100,7 @@
                 android:background="@drawable/shape_visitor_server_grid"
                 android:hint="@string/str_input_pwd"
                 android:maxLength="20"
+                android:inputType="textPassword"
                 android:paddingHorizontal="@dimen/dp_15"
                 app:layout_constraintLeft_toLeftOf="@id/tvReset"
                 app:layout_constraintTop_toBottomOf="@id/etResetPwd" />
