--- a/app/src/main/res/layout/gv_filter_image.xml
+++ b/app/src/main/res/layout/gv_filter_image.xml
@@ -36,7 +36,7 @@
         android:gravity="center_vertical"
         android:paddingStart="5dp"
         android:paddingTop="8dp"
-        android:text="00:00"
+        tools:text="00:00"
         android:textColor="@color/white"
         android:textSize="11sp"
         android:visibility="gone"
