--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -98,7 +98,7 @@
                 android:layout_marginHorizontal="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_15"
                 android:background="@drawable/shape_visitor_server_grid"
-                android:hint="@string/str_input_pwd"
+                android:hint="@string/str_input_pwd_again"
                 android:maxLength="20"
                 android:inputType="textPassword"
                 android:paddingHorizontal="@dimen/dp_15"
