增加线路推荐中可进行导航

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -57,8 +57,8 @@
                 android:layout_marginTop="@dimen/dp_52"
                 android:background="@drawable/shape_visitor_server_grid"
                 android:hint="@string/str_input_phone"
-                android:maxLength="11"
                 android:inputType="phone"
+                android:maxLength="11"
                 android:paddingHorizontal="@dimen/dp_15"
                 app:layout_constraintLeft_toLeftOf="@id/tvReset"
                 app:layout_constraintTop_toBottomOf="@id/tvSendSmsTip" />
@@ -77,33 +77,52 @@
                 app:layout_constraintLeft_toLeftOf="@id/tvReset"
                 app:layout_constraintTop_toBottomOf="@id/etResetPhone" />
 
-            <EditText
-                android:id="@+id/etResetPwd"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_52"
-                android:layout_marginHorizontal="@dimen/dp_20"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputLayoutResetPwd"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
-                android:background="@drawable/shape_visitor_server_grid"
-                android:inputType="textPassword"
-                android:hint="@string/str_input_pwd"
-                android:maxLength="20"
-                android:paddingHorizontal="@dimen/dp_15"
-                app:layout_constraintLeft_toLeftOf="@id/tvReset"
-                app:layout_constraintTop_toBottomOf="@id/resetSendSmsView" />
+                app:hintEnabled="false"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resetSendSmsView"
+                app:passwordToggleEnabled="true">
 
-            <EditText
-                android:id="@+id/etResetPwdAgain"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_52"
-                android:layout_marginHorizontal="@dimen/dp_20"
+                <EditText
+                    android:id="@+id/etResetPwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_52"
+                    android:layout_marginHorizontal="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:background="@drawable/shape_visitor_server_grid"
+                    android:hint="@string/str_input_pwd"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
+                    android:paddingHorizontal="@dimen/dp_15" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputLayoutResetPwdAgain"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
-                android:background="@drawable/shape_visitor_server_grid"
-                android:hint="@string/str_input_pwd_again"
-                android:maxLength="20"
-                android:inputType="textPassword"
-                android:paddingHorizontal="@dimen/dp_15"
-                app:layout_constraintLeft_toLeftOf="@id/tvReset"
-                app:layout_constraintTop_toBottomOf="@id/etResetPwd" />
+                app:hintEnabled="false"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/inputLayoutResetPwd"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etResetPwdAgain"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_52"
+                    android:layout_marginHorizontal="@dimen/dp_20"
+                    android:background="@drawable/shape_visitor_server_grid"
+                    android:hint="@string/str_input_pwd_again"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
+                    android:paddingHorizontal="@dimen/dp_15" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.gavindon.mvvm_lib.widgets.DonButton
                 android:id="@+id/btnUpdate"
@@ -116,7 +135,7 @@
                 app:circleRadius="@dimen/dp_3"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etResetPwdAgain"
+                app:layout_constraintTop_toBottomOf="@id/inputLayoutResetPwdAgain"
                 app:normalBackgroundColor="#FDD655"
                 app:normalTextColor="@color/white"
                 app:pressBackgroundColor="#FFDACB45" />
