--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -58,6 +58,33 @@
             android:drawableEnd="@drawable/ic_arrow_right"
             android:src="@drawable/ic_add_image" />
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rlUserPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dp_12"
+        android:background="@drawable/underline"
+        android:gravity="center_vertical"
+        android:paddingVertical="@dimen/dp_15">
+
+        <TextView
+            android:id="@+id/tvUserPhoneName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="更换手机号"
+            android:textColor="@color/fontMajor"
+            android:textSize="@dimen/sp_16" />
+
+        <TextView
+            android:id="@+id/tvUserPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:src="@drawable/ic_add_image" />
+    </RelativeLayout>
 
 
     <RelativeLayout
