修改机器人功能

--- a/app/src/main/res/layout/info_window_toilet.xml
+++ b/app/src/main/res/layout/info_window_toilet.xml
@@ -50,8 +50,8 @@
 
         <TextView
             android:id="@+id/infoWindowRetailToilet"
-            android:layout_width="37dp"
-            android:layout_height="17dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="@color/fontGrey"
             android:textSize="@dimen/sp_12"
             app:layout_constraintBottom_toBottomOf="@id/infowWindowManIV"
