--- a/app/src/main/res/layout/dialog_protocol.xml
+++ b/app/src/main/res/layout/dialog_protocol.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
             android:paddingHorizontal="12dp"
-            android:text="服务条款和隐私政策提示"
+            android:text="软件服务协议和用户隐私协议提示"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -34,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:text="欢迎使用温榆河app"
+            android:text="欢迎使用畅游温榆APP"
             android:textColor="@color/color999"
             android:textSize="@dimen/sp_14"
             app:layout_constraintLeft_toLeftOf="parent"
