--- a/app/src/main/res/layout/layout_guide3.xml
+++ b/app/src/main/res/layout/layout_guide3.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_guide3" />
+        android:src="@mipmap/guide3" />
 
     <ImageView
         android:layout_width="match_parent"
