--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,6 +124,7 @@
             android:textColor="@color/fontMajor"
             android:textSize="@dimen/sp_24"
             app:circleRadius="@dimen/dp_26"
+            app:normalTextColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvForget"
@@ -149,7 +150,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
             android:drawablePadding="@dimen/dp_5"
-            android:text="微信登陆"
+            android:text="微信登录"
             android:textColor="@color/fontMajor"
             android:textSize="@dimen/sp_14"
             app:drawableTopCompat="@mipmap/icon_wechat"
@@ -159,12 +160,13 @@
 
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/cbAgree"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_60"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:gravity="top"
-            android:text="我已阅读并同意"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintHorizontal_bias="0"
+            android:gravity="center_vertical"
+            tools:text="我已阅读并同意"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnWxLogin" />
 
